--- a/.env-example
+++ b/.env-example
@@ -2,7 +2,7 @@
 MAILGUN_API_KEY=
 
 # This is the domain you verified with Mailgun
-DOMAIN=example.com
+DOMAIN=mailer.example.com
 
 # This is the sender address for your emails. You can override it when
 # you send emails.
